--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,8 @@ h1 {
     height: 90px;
     width: 90px;
     border-radius: 50%;
-    background-color: #ff580aa4;
+    background-color: #ff580aa6;
+    box-shadow: 4px -4px 8px #FF570A,-4px 4px 8px #FF570A,4px 4px 8px #FF570A,-4px -4px 8px #FF570A;
 }
 
 .icon{
