--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,7 @@ h1 {
     height: 90px;
     width: 90px;
     border-radius: 50%;
-    background-color: #ff580aa6;
+    background-color: white;
     box-shadow: 4px -4px 8px #FF570A,-4px 4px 8px #FF570A,4px 4px 8px #FF570A,-4px -4px 8px #FF570A;
 }
 
