--- a/css/styles.css
+++ b/css/styles.css
@@ -480,3 +480,8 @@ a:hover{
     from, to { border-color: transparent }
     50% { border-color: #FF570A; }
   }
+
+
+  .submit-btn:hover{
+      background-color: #ff580ab6;
+  }
