added dark and light mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 :root{
     --bg : #161616;
+    --bg2: black;
     --text: #ffffff;
     --highlights : #FF570A;
 }
@@ -25,7 +26,7 @@ body{
 
 nav{
     /* height: 80px; */
-    background-color: black;
+    background-color: var(--bg);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -211,7 +212,7 @@ ul.nm li:hover span{
     }
 }
 #projects,#skills,#contact{
-    background-color: black;
+    background-color: var(--bg2);
 }
 .name{
     font-size: 6rem;
@@ -251,7 +252,7 @@ ul.nm li:hover span{
 .knowmore a{
     background-color: var(--highlights);
     font-weight: 500;
-    color:white;
+    color:var(--text);
 }
 
 
@@ -341,7 +342,7 @@ h1 {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: var(--text);
+    background-color: white;
     border:2px solid var(--highlights);
 }
 .college-logo img{
@@ -431,7 +432,7 @@ a:hover{
 .loading{
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: var(--bg);
     position: fixed;
     top: 0;
     left: 0;
@@ -484,4 +485,43 @@ a:hover{
 
   .submit-btn:hover{
       background-color: #ff580ab6;
+  }
+
+  #switch{
+      /* background-color: var(--text); */
+      text-align: center;
+        position: fixed;
+        bottom: 30px;
+        left: 30px;
+        height: 40px;
+        width: 40px;
+        /* border-radius: 50%; */
+  }
+  #switch i{
+      font-size: 40px;
+      color: var(--text);
+      animation: shake 4s infinite;
+  }
+
+
+  @keyframes shake {
+      0%{
+          transform: rotate(-30deg);
+      }
+      25%{
+          transform: rotate(60deg);
+      }
+      50%{
+          transform: rotate(-30deg);
+      }
+      75%{
+        transform: rotate(60deg);
+    }
+    90%{
+        transform: rotate(-30deg);
+    }
+    100%{
+        transform: rotate(30deg);
+    }
+
   }
