--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html{
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+    /* scroll-snap-type: y mandatory; */
 }
 
 body{
@@ -23,7 +23,7 @@ body{
     background-color: var(--bg);
     color: var(--text);
     transition: 0.3s ease all;
-    scroll-snap-type: y mandatory;
+    /* scroll-snap-type: y mandatory; */
 }
 
 nav{
@@ -207,7 +207,7 @@ ul.nm li:hover span{
     padding-top: 30px;
     padding-bottom: 30px;
     min-height: 100vh;
-    scroll-snap-align: start;
+    /* scroll-snap-align: start; */
 }
 
 @media screen and (max-width:700px){
