--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,10 @@ a:hover {
     /* scroll-snap-align: start; */
 }
 
+#intro{
+    min-height: 90vh;
+}
+
 @media screen and (max-width:700px) {
 
     #projects,
@@ -184,13 +188,16 @@ a:hover {
         font-size: 2.4rem;
     }
 }
-
-.knowmore a {
-    background-color: var(--highlights);
-    font-weight: 500;
-    color: var(--text);
+.knowmore{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    height: 20px;
+    width: 20px;
+    border-bottom: 2px solid var(--highlights);
+    border-right: 2px solid var(--highlights);
+    transform: rotate(45deg);
 }
-
 
 h1 {
     letter-spacing: 2px;
@@ -472,7 +479,7 @@ canvas {
 #particles-js {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 90vh;
     background-image: url("");
     background-color: transparent;
     background-repeat: no-repeat;
